# claws

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mcp_server.js  mcp_server.py  package.json
.claude/: settings.json
.claude/commands/: claws-connect.md  claws-create.md  claws-exec.md  claws-fix.md  claws-fleet.md  claws-read.md  claws-send.md  claws-status.md  claws-update.md  claws-worker.md
.claude/skills/prompt-templates/: SKILL.md
clients/python/: pyproject.toml
clients/python/claws/: __init__.py  client.py
docs/: features.md  guide.md  index.html  protocol.md
examples/: basic-orchestrator.py  parallel-workers.py
extension/: CHANGELOG.md  README.md  package-lock.json  package.json
extension/native/: .metadata.json
extension/scripts/: bundle-native.mjs
extension/src/: claws-pty.ts  extension.js  extension.ts
extension/test/: capture-store-trim.test.js  oversized-line.test.js  pty-lifecycle.test.js  smoke.test.js
extension/test/suite/: extension.test.js  index.js
rules/: claws-default-behavior.md
scripts/: fix.sh  install.ps1  install.sh  report.sh  shell-hook.fish  shell-hook.sh  terminal-wrapper.sh  test-install.sh
templates/: CLAUDE.claws.md
